* finished basic support for calling methods from external C++ classes     (slightly modified patch by Sven Barth, mantis #15082)
git-svn-id: trunk@14185 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8240,22 +8240,27 @@ tests/test/cg/obj/beos/i386/ctest.o -text
 tests/test/cg/obj/beos/i386/tcext3.o -text
 tests/test/cg/obj/beos/i386/tcext4.o -text
 tests/test/cg/obj/beos/i386/tcext5.o -text
+tests/test/cg/obj/cpptcl1.cpp svneol=native#text/plain
 tests/test/cg/obj/darwin/arm/ctest.o -text
 tests/test/cg/obj/darwin/arm/tcext3.o -text
 tests/test/cg/obj/darwin/arm/tcext4.o -text
 tests/test/cg/obj/darwin/arm/tcext5.o -text
+tests/test/cg/obj/darwin/i386/cpptcl1.o -text
 tests/test/cg/obj/darwin/i386/ctest.o -text
 tests/test/cg/obj/darwin/i386/tcext3.o -text
 tests/test/cg/obj/darwin/i386/tcext4.o -text
 tests/test/cg/obj/darwin/i386/tcext5.o -text
+tests/test/cg/obj/darwin/powerpc/cpptcl1.o -text
 tests/test/cg/obj/darwin/powerpc/ctest.o -text
 tests/test/cg/obj/darwin/powerpc/tcext3.o -text
 tests/test/cg/obj/darwin/powerpc/tcext4.o -text
 tests/test/cg/obj/darwin/powerpc/tcext5.o -text
+tests/test/cg/obj/darwin/powerpc64/cpptcl1.o -text
 tests/test/cg/obj/darwin/powerpc64/ctest.o -text
 tests/test/cg/obj/darwin/powerpc64/tcext3.o -text
 tests/test/cg/obj/darwin/powerpc64/tcext4.o -text
 tests/test/cg/obj/darwin/powerpc64/tcext5.o -text
+tests/test/cg/obj/darwin/x86_64/cpptcl1.o -text
 tests/test/cg/obj/darwin/x86_64/ctest.o -text
 tests/test/cg/obj/darwin/x86_64/tcext3.o -text
 tests/test/cg/obj/darwin/x86_64/tcext4.o -text
@@ -8284,6 +8289,7 @@ tests/test/cg/obj/linux/arm/ctest.o -text
 tests/test/cg/obj/linux/arm/tcext3.o -text
 tests/test/cg/obj/linux/arm/tcext4.o -text
 tests/test/cg/obj/linux/arm/tcext5.o -text
+tests/test/cg/obj/linux/i386/cpptcl1.o -text
 tests/test/cg/obj/linux/i386/ctest.o -text
 tests/test/cg/obj/linux/i386/tcext3.o -text
 tests/test/cg/obj/linux/i386/tcext4.o -text
@@ -8425,6 +8431,7 @@ tests/test/cg/tcnvset.pp svneol=native#text/plain
 tests/test/cg/tcnvstr1.pp svneol=native#text/plain
 tests/test/cg/tcnvstr2.pp svneol=native#text/plain
 tests/test/cg/tcnvstr3.pp svneol=native#text/plain
+tests/test/cg/tcppcl1.pp svneol=native#text/plain
 tests/test/cg/tderef.pp svneol=native#text/plain
 tests/test/cg/tdivz1.pp svneol=native#text/plain
 tests/test/cg/tdivz2.pp svneol=native#text/plain
