+ Objective-C category support (old and new ABI, both external and     implemented in Pascal). See     http://wiki.freepascal.org/FPC_PasCocoa#Category_declaration for syntax     details
git-svn-id: trunk@14196 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8963,6 +8963,13 @@ tests/test/tobjc20.pp svneol=native#text/plain
 tests/test/tobjc21.pp svneol=native#text/plain
 tests/test/tobjc22.pp svneol=native#text/plain
 tests/test/tobjc23.pp svneol=native#text/plain
+tests/test/tobjc24.pp svneol=native#text/plain
+tests/test/tobjc25.pp svneol=native#text/plain
+tests/test/tobjc26.pp svneol=native#text/plain
+tests/test/tobjc26a.pp svneol=native#text/plain
+tests/test/tobjc27a.pp svneol=native#text/plain
+tests/test/tobjc27b.pp svneol=native#text/plain
+tests/test/tobjc28.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
 tests/test/tobjc4a.pp svneol=native#text/plain
@@ -9300,6 +9307,10 @@ tests/test/units/sysutils/tfloattostr.pp svneol=native#text/plain
 tests/test/units/sysutils/tlocale.pp svneol=native#text/plain
 tests/test/units/sysutils/tsscanf.pp svneol=native#text/plain
 tests/test/units/sysutils/tstrtobool.pp svneol=native#text/plain
+tests/test/uobjc24.pp svneol=native#text/plain
+tests/test/uobjc26.pp svneol=native#text/plain
+tests/test/uobjc27a.pp svneol=native#text/plain
+tests/test/uobjc27b.pp svneol=native#text/plain
 tests/test/uobjc7.pp svneol=native#text/plain
 tests/test/uobjcl1.pp svneol=native#text/plain
 tests/test/uprec6.pp svneol=native#text/plain
