* let search_class_helper() only return class helper methods; it could     also return regular objcclass methods before, because these are also     registered under class helper procsyms for future id.anymethod support   * give an error when calling an inherited method from an objccategory     method, if that is not declared in the parent of the extended class     (since calling inherited in an objccategory method is the same as      calling inherited in a method of the extended class; if a method is      replaced, calling inherited will *not* call the original method      from the original class)
git-svn-id: trunk@14213 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8970,6 +8970,9 @@ tests/test/tobjc26a.pp svneol=native#text/plain
 tests/test/tobjc27a.pp svneol=native#text/plain
 tests/test/tobjc27b.pp svneol=native#text/plain
 tests/test/tobjc28.pp svneol=native#text/plain
+tests/test/tobjc29.pp svneol=native#text/plain
+tests/test/tobjc29a.pp svneol=native#text/plain
+tests/test/tobjc29b.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
 tests/test/tobjc4a.pp svneol=native#text/plain
