--- a/.gitattributes
+++ b/.gitattributes
@@ -234,10 +234,15 @@ compiler/m68k/ra68k.pas svneol=native#text/plain
 compiler/m68k/ra68kmot.pas svneol=native#text/plain
 compiler/m68k/rgcpu.pas svneol=native#text/plain
 compiler/mips/aasmcpu.pas svneol=native#text/plain
+compiler/mips/cgcpu.pas svneol=native#text/pascal
 compiler/mips/cpubase.pas svneol=native#text/plain
 compiler/mips/cpuinfo.pas svneol=native#text/plain
+compiler/mips/cpupara.pas svneol=native#text/pascal
+compiler/mips/cpupi.pas svneol=native#text/pascal
 compiler/mips/itcpugas.pas svneol=native#text/plain
 compiler/mips/mipsreg.dat svneol=native#text/plain
+compiler/mips/opcode.inc svneol=native#text/plain
+compiler/mips/rgcpu.pas svneol=native#text/pascal
 compiler/mips/rmipscon.inc svneol=native#text/plain
 compiler/mips/rmipsdwf.inc svneol=native#text/plain
 compiler/mips/rmipsgas.inc svneol=native#text/plain
