* more MIPS code of David Zhang integrated
git-svn-id: trunk@14228 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -234,15 +234,21 @@ compiler/m68k/ra68k.pas svneol=native#text/plain
 compiler/m68k/ra68kmot.pas svneol=native#text/plain
 compiler/m68k/rgcpu.pas svneol=native#text/plain
 compiler/mips/aasmcpu.pas svneol=native#text/plain
-compiler/mips/cgcpu.pas svneol=native#text/pascal
+compiler/mips/aoptcpu.pas svneol=native#text/plain
+compiler/mips/aoptcpub.pas svneol=native#text/plain
+compiler/mips/aoptcpud.pas svneol=native#text/plain
+compiler/mips/cgcpu.pas svneol=native#text/plain
 compiler/mips/cpubase.pas svneol=native#text/plain
+compiler/mips/cpugas.pas svneol=native#text/plain
 compiler/mips/cpuinfo.pas svneol=native#text/plain
-compiler/mips/cpupara.pas svneol=native#text/pascal
-compiler/mips/cpupi.pas svneol=native#text/pascal
+compiler/mips/cpunode.pas svneol=native#text/plain
+compiler/mips/cpupara.pas svneol=native#text/plain
+compiler/mips/cpupi.pas svneol=native#text/plain
 compiler/mips/itcpugas.pas svneol=native#text/plain
 compiler/mips/mipsreg.dat svneol=native#text/plain
+compiler/mips/ncpuadd.pas svneol=native#text/plain
 compiler/mips/opcode.inc svneol=native#text/plain
-compiler/mips/rgcpu.pas svneol=native#text/pascal
+compiler/mips/rgcpu.pas svneol=native#text/plain
 compiler/mips/rmipscon.inc svneol=native#text/plain
 compiler/mips/rmipsdwf.inc svneol=native#text/plain
 compiler/mips/rmipsgas.inc svneol=native#text/plain
