* adapted more fpc-mips stuff to trunk
git-svn-id: trunk@14230 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -244,9 +244,15 @@ compiler/mips/cpuinfo.pas svneol=native#text/plain
 compiler/mips/cpunode.pas svneol=native#text/plain
 compiler/mips/cpupara.pas svneol=native#text/plain
 compiler/mips/cpupi.pas svneol=native#text/plain
+compiler/mips/cputarg.pas svneol=native#text/pascal
 compiler/mips/itcpugas.pas svneol=native#text/plain
 compiler/mips/mipsreg.dat svneol=native#text/plain
 compiler/mips/ncpuadd.pas svneol=native#text/plain
+compiler/mips/ncpucall.pas svneol=native#text/pascal
+compiler/mips/ncpucnv.pas svneol=native#text/pascal
+compiler/mips/ncpuinln.pas svneol=native#text/pascal
+compiler/mips/ncpumat.pas svneol=native#text/pascal
+compiler/mips/ncpuset.pas svneol=native#text/pascal
 compiler/mips/opcode.inc svneol=native#text/plain
 compiler/mips/rgcpu.pas svneol=native#text/plain
 compiler/mips/rmipscon.inc svneol=native#text/plain
@@ -263,6 +269,7 @@ compiler/mips/rmipssri.inc svneol=native#text/plain
 compiler/mips/rmipssta.inc svneol=native#text/plain
 compiler/mips/rmipsstd.inc svneol=native#text/plain
 compiler/mips/rmipssup.inc svneol=native#text/plain
+compiler/mips/strinst.inc svneol=native#text/plain
 compiler/msg/errorct.msg svneol=native#text/plain
 compiler/msg/errord.msg svneol=native#text/plain
 compiler/msg/errorda.msg svneol=native#text/plain
