+ support for id.anyobjcmethodinscope() calls for Objective-Pascal code,     using standard FPC overload selection logic   * fixed detection of references to static symbol tables for class     helpers
git-svn-id: trunk@14234 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8992,6 +8992,10 @@ tests/test/tobjc29.pp svneol=native#text/plain
 tests/test/tobjc29a.pp svneol=native#text/plain
 tests/test/tobjc29b.pp svneol=native#text/plain
 tests/test/tobjc3.pp svneol=native#text/plain
+tests/test/tobjc30.pp svneol=native#text/plain
+tests/test/tobjc30a.pp svneol=native#text/plain
+tests/test/tobjc30b.pp svneol=native#text/plain
+tests/test/tobjc30c.pp svneol=native#text/plain
 tests/test/tobjc4.pp svneol=native#text/plain
 tests/test/tobjc4a.pp svneol=native#text/plain
 tests/test/tobjc5.pp svneol=native#text/plain
@@ -9332,6 +9336,7 @@ tests/test/uobjc24.pp svneol=native#text/plain
 tests/test/uobjc26.pp svneol=native#text/plain
 tests/test/uobjc27a.pp svneol=native#text/plain
 tests/test/uobjc27b.pp svneol=native#text/plain
+tests/test/uobjc30c.pp svneol=native#text/plain
 tests/test/uobjc7.pp svneol=native#text/plain
 tests/test/uobjcl1.pp svneol=native#text/plain
 tests/test/uprec6.pp svneol=native#text/plain
