+ x86_64 processor specific solaris files
git-svn-id: trunk@14235 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -7092,6 +7092,9 @@ rtl/solaris/termiosproc.inc svneol=native#text/plain
 rtl/solaris/unxconst.inc svneol=native#text/plain
 rtl/solaris/unxfunc.inc svneol=native#text/plain
 rtl/solaris/unxsockh.inc svneol=native#text/plain
+rtl/solaris/x86_64/sighnd.inc svneol=native#text/plain
+rtl/solaris/x86_64/sighndh.inc svneol=native#text/plain
+rtl/solaris/x86_64/start.inc svneol=native#text/plain
 rtl/sparc/int64p.inc svneol=native#text/plain
 rtl/sparc/makefile.cpu svneol=native#text/plain
 rtl/sparc/math.inc svneol=native#text/plain
