+ MIPS specific part of the rtl, by David Zhang
git-svn-id: trunk@14255 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6632,6 +6632,14 @@ rtl/macos/sysos.inc svneol=native#text/plain
 rtl/macos/sysosh.inc svneol=native#text/plain
 rtl/macos/system.pp svneol=native#text/plain
 rtl/macos/sysutils.pp svneol=native#text/plain
+rtl/mips/int64p.inc svneol=native#text/plain
+rtl/mips/math.inc svneol=native#text/plain
+rtl/mips/mipsel.inc svneol=native#text/plain
+rtl/mips/set.inc svneol=native#text/plain
+rtl/mips/setjump.inc svneol=native#text/plain
+rtl/mips/setjumph.inc svneol=native#text/plain
+rtl/mips/strings.inc svneol=native#text/plain
+rtl/mips/stringss.inc svneol=native#text/plain
 rtl/morphos/Makefile svneol=native#text/plain
 rtl/morphos/Makefile.fpc svneol=native#text/plain
 rtl/morphos/aboxlib.pas -text svneol=unset#text/plain
