* fixed range checking for inc/dec when mixing unsigned and signed types     (mantis #14841)    -> this also makes it impossible now to use constructs such as     inc(qword_var,-1) with range checking enabled, because that would require     a conversion to 128 bit for proper evaluation
git-svn-id: trunk@14260 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10083,6 +10083,7 @@ tests/webtbs/tw1477.pp svneol=native#text/plain
 tests/webtbs/tw1479.pp svneol=native#text/plain
 tests/webtbs/tw14798.pp svneol=native#text/plain
 tests/webtbs/tw14812.pp svneol=native#text/plain
+tests/webtbs/tw14841.pp svneol=native#text/plain
 tests/webtbs/tw1485.pp svneol=native#text/plain
 tests/webtbs/tw1489.pp svneol=native#text/plain
 tests/webtbs/tw14958a.pp svneol=native#text/plain
