--- a/.gitattributes
+++ b/.gitattributes
@@ -6528,6 +6528,13 @@ rtl/linux/m68k/stat.inc svneol=native#text/plain
 rtl/linux/m68k/syscall.inc svneol=native#text/plain
 rtl/linux/m68k/syscallh.inc svneol=native#text/plain
 rtl/linux/m68k/sysnr.inc svneol=native#text/plain
+rtl/linux/mips/bsyscall.inc svneol=native#text/plain
+rtl/linux/mips/sighnd.inc svneol=native#text/plain
+rtl/linux/mips/sighndh.inc svneol=native#text/plain
+rtl/linux/mips/stat.inc svneol=native#text/plain
+rtl/linux/mips/syscall.inc svneol=native#text/plain
+rtl/linux/mips/syscallh.inc svneol=native#text/plain
+rtl/linux/mips/sysnr.inc svneol=native#text/plain
 rtl/linux/oldlinux.pp svneol=native#text/plain
 rtl/linux/osdefs.inc svneol=native#text/plain
 rtl/linux/osmacro.inc svneol=native#text/plain
