--- a/.gitattributes
+++ b/.gitattributes
@@ -6529,6 +6529,7 @@ rtl/linux/m68k/syscall.inc svneol=native#text/plain
 rtl/linux/m68k/syscallh.inc svneol=native#text/plain
 rtl/linux/m68k/sysnr.inc svneol=native#text/plain
 rtl/linux/mips/bsyscall.inc svneol=native#text/plain
+rtl/linux/mips/prt0.as svneol=native#text/plain
 rtl/linux/mips/sighnd.inc svneol=native#text/plain
 rtl/linux/mips/sighndh.inc svneol=native#text/plain
 rtl/linux/mips/stat.inc svneol=native#text/plain
@@ -6641,6 +6642,7 @@ rtl/macos/sysosh.inc svneol=native#text/plain
 rtl/macos/system.pp svneol=native#text/plain
 rtl/macos/sysutils.pp svneol=native#text/plain
 rtl/mips/int64p.inc svneol=native#text/plain
+rtl/mips/makefile.cpu svneol=native#text/plain
 rtl/mips/math.inc svneol=native#text/plain
 rtl/mips/mipsel.inc svneol=native#text/plain
 rtl/mips/set.inc svneol=native#text/plain
