o added ARM VPFv2/VFPv3 support:     + RTL support:       o VFP exceptions are disabled by default on Darwin,         because they cause kernel panics on iPhoneOS 2.2.1 at least       o all denormals are truncated to 0 on Darwin, because disabling         that also causes kernel panics on iPhoneOS 2.2.1 (probably         because otherwise denormals can also cause exceptions)     * set softfloat rounding mode correctly for non-wince/darwin/vfp       targets     + compiler support: only half the number of single precision       registers is available due to limitations of the register       allocator     + added a number of comments about why the stackframe on ARM is       set up the way it is by the compiler     + added regtype and subregtype info to regsets, because they're       also used for VFP registers (+ support in assembler reader)     + various generic support routines for dealing with floating point       values located in integer registers that have to be transferred to       mm registers (needed for VFP)     * renamed use_sse() to use_vectorfpu() and also use it for       ARM/vfp support     o only superficially tested for Linux (compiler compiled with -Cpvfpv6       -Cfvfpv2 works on a Cortex-A8, no testsuite run performed -- at least       the fpu exception handler still needs to be implemented), Darwin has       been tested more thoroughly   + added ARMv6 cpu type and made it default for Darwin/ARM   + ARMv6+ implementations of atomic operations using ldrex/strex   * don't use r9 on Darwin/ARM, as it's reserved under certain     circumstances (don't know yet which ones)   * changed C-test object files for ARM/Darwin to ARMv6 versions   * check in assembler reader that regsets are not empty, because     instructions with a regset operand have undefined behaviour in that     case   * fixed resultdef of tarmtypeconvnode.first_int_to_real in case of     int64->single type conversion   * fixed constant pool locations in case 64 bit constants are generated, 

--- a/.gitattributes
+++ b/.gitattributes
@@ -8283,6 +8283,7 @@ tests/test/cg/obj/beos/i386/tcext3.o -text
 tests/test/cg/obj/beos/i386/tcext4.o -text
 tests/test/cg/obj/beos/i386/tcext5.o -text
 tests/test/cg/obj/cpptcl1.cpp svneol=native#text/plain
+tests/test/cg/obj/darwin/arm/cpptcl1.o -text
 tests/test/cg/obj/darwin/arm/ctest.o -text
 tests/test/cg/obj/darwin/arm/tcext3.o -text
 tests/test/cg/obj/darwin/arm/tcext4.o -text
