* store/restore trttinode.rttidatatype to/from ppu file, and also copy it in     rttidatatype.getcopy (fixes mantis #15207)
git-svn-id: trunk@14318 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10102,6 +10102,7 @@ tests/webtbs/tw14958b.pp svneol=native#text/plain
 tests/webtbs/tw1501.pp svneol=native#text/plain
 tests/webtbs/tw15088.pp svneol=native#text/plain
 tests/webtbs/tw15169.pp svneol=native#text/plain
+tests/webtbs/tw15207.pp svneol=native#text/plain
 tests/webtbs/tw1532.pp svneol=native#text/plain
 tests/webtbs/tw1539.pp svneol=native#text/plain
 tests/webtbs/tw1567.pp svneol=native#text/plain
