* made test names unique (if you overwrite an existing binary with another     one on iPhoneOS, the OS refuses to execute the new binary; you have to     remove the old one first -- but it's easier to make sure that there are     no two tests with the same name)
git-svn-id: trunk@14331 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8485,7 +8485,6 @@ tests/test/cg/tfor.pp svneol=native#text/plain
 tests/test/cg/tformfnc.pp svneol=native#text/plain
 tests/test/cg/tfuncret.pp svneol=native#text/plain
 tests/test/cg/tin.pp svneol=native#text/plain
-tests/test/cg/tincdec.pp svneol=native#text/plain
 tests/test/cg/tincexc.pp svneol=native#text/plain
 tests/test/cg/tinitdon.pp svneol=native#text/plain
 tests/test/cg/tis.pp svneol=native#text/plain
@@ -8517,6 +8516,7 @@ tests/test/cg/treadwrt.pp svneol=native#text/plain
 tests/test/cg/tshlshr.pp svneol=native#text/plain
 tests/test/cg/tstr.pp svneol=native#text/plain
 tests/test/cg/tsubst.pp svneol=native#text/plain
+tests/test/cg/ttincdec.pp svneol=native#text/plain
 tests/test/cg/ttryexc1.pp svneol=native#text/plain
 tests/test/cg/ttryfin1.pp svneol=native#text/plain
 tests/test/cg/ttryfin2.pp svneol=native#text/plain
@@ -9054,8 +9054,6 @@ tests/test/tover1.pp svneol=native#text/plain
 tests/test/tover2.pp svneol=native#text/plain
 tests/test/tover3.pp svneol=native#text/plain
 tests/test/tpackrec.pp svneol=native#text/plain
-tests/test/tpara1.pp svneol=native#text/plain
-tests/test/tpara2.pp svneol=native#text/plain
 tests/test/tparray1.pp svneol=native#text/plain
 tests/test/tparray10.pp svneol=native#text/plain
 tests/test/tparray11.pp svneol=native#text/plain
@@ -9177,6 +9175,8 @@ tests/test/tstrreal2.pp svneol=native#text/plain
 tests/test/tstrreal3.pp svneol=native#text/plain
 tests/test/tsubdecl.pp svneol=native#text/plain
 tests/test/tsymlibrary1.pp svneol=native#text/pascal
+tests/test/ttpara1.pp svneol=native#text/plain
+tests/test/ttpara2.pp svneol=native#text/plain
 tests/test/tunaligned1.pp svneol=native#text/plain
 tests/test/tunistr1.pp svneol=native#text/plain
 tests/test/tunistr2.pp svneol=native#text/plain
