--- a/.gitattributes
+++ b/.gitattributes
@@ -5634,6 +5634,8 @@ rtl/gba/cprt0.as svneol=native#text/plain
 rtl/gba/dos.pp svneol=native#text/plain
 rtl/gba/gbabios.inc svneol=native#text/plain
 rtl/gba/gbabiosh.inc svneol=native#text/plain
+rtl/gba/libc.inc svneol=native#text/plain
+rtl/gba/libch.inc svneol=native#text/plain
 rtl/gba/prt0.as svneol=native#text/plain
 rtl/gba/sysdir.inc svneol=native#text/plain
 rtl/gba/sysfile.inc svneol=native#text/plain
