* fixed inverted condition in inc/dec range/overflow case that caused     unsigned 32/64 bit values to be always explicitly typecasted to signed     32/64 bit instead of never (mantis #15304)
git-svn-id: trunk@14379 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10111,6 +10111,7 @@ tests/webtbs/tw15088.pp svneol=native#text/plain
 tests/webtbs/tw15169.pp svneol=native#text/plain
 tests/webtbs/tw15207.pp svneol=native#text/plain
 tests/webtbs/tw15274.pp svneol=native#text/plain
+tests/webtbs/tw15304.pp svneol=native#text/plain
 tests/webtbs/tw1532.pp svneol=native#text/plain
 tests/webtbs/tw1539.pp svneol=native#text/plain
 tests/webtbs/tw1567.pp svneol=native#text/plain
