--- a/.gitattributes
+++ b/.gitattributes
@@ -8276,6 +8276,20 @@ tests/tbs/ub0489.pp svneol=native#text/plain
 tests/tbs/ub0489b.pp svneol=native#text/plain
 tests/tbs/ub0506.pp svneol=native#text/plain
 tests/test/README.txt svneol=native#text/plain
+tests/test/alglib/t_testconvunit.pp svneol=native#text/plain
+tests/test/alglib/t_testcorrunit.pp svneol=native#text/plain
+tests/test/alglib/t_testfftunit.pp svneol=native#text/plain
+tests/test/alglib/t_testfhtunit.pp svneol=native#text/plain
+tests/test/alglib/u_ap.pp svneol=native#text/plain
+tests/test/alglib/u_conv.pp svneol=native#text/plain
+tests/test/alglib/u_corr.pp svneol=native#text/plain
+tests/test/alglib/u_fft.pp svneol=native#text/plain
+tests/test/alglib/u_fht.pp svneol=native#text/plain
+tests/test/alglib/u_ftbase.pp svneol=native#text/plain
+tests/test/alglib/u_testconvunit.pp svneol=native#text/plain
+tests/test/alglib/u_testcorrunit.pp svneol=native#text/plain
+tests/test/alglib/u_testfftunit.pp svneol=native#text/plain
+tests/test/alglib/u_testfhtunit.pp svneol=native#text/plain
 tests/test/cg/cdecl/taoc1.pp svneol=native#text/plain
 tests/test/cg/cdecl/taoc2.pp svneol=native#text/plain
 tests/test/cg/cdecl/taoc3.pp svneol=native#text/plain
