* treat parameters that are passed in registers as register operands in the     x86 intel assembler reader (patch by Sergei Gorelkin, mantis #6851)
git-svn-id: trunk@14402 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10760,6 +10760,7 @@ tests/webtbs/tw6769.pp svneol=native#text/plain
 tests/webtbs/tw6822a.pp svneol=native#text/plain
 tests/webtbs/tw6822b.pp svneol=native#text/plain
 tests/webtbs/tw6822c.pp svneol=native#text/plain
+tests/webtbs/tw6851.pp svneol=native#text/plain
 tests/webtbs/tw6865.pp svneol=native#text/plain
 tests/webtbs/tw6868.pp svneol=native#text/plain
 tests/webtbs/tw6960.pp svneol=native#text/plain
