* new Portuguese translations by Marcelo B Paula (mantis #15344)
git-svn-id: trunk@14443 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -285,8 +285,8 @@ compiler/msg/errorid.msg svneol=native#text/plain
 compiler/msg/errorn.msg svneol=native#text/plain
 compiler/msg/errorpl.msg svneol=native#text/plain
 compiler/msg/errorpli.msg svneol=native#text/plain
-compiler/msg/errorptd.msg svneol=native#text/plain
-compiler/msg/errorptw.msg svneol=native#text/plain
+compiler/msg/errorpt.msg svneol=native#text/plain
+compiler/msg/errorptu.msg svneol=native#text/plain
 compiler/msg/errorr.msg svneol=native#text/plain
 compiler/msg/errorru.msg svneol=native#text/plain
 compiler/msg/errorues.msg svneol=native#text/plain
