--- a/.gitattributes
+++ b/.gitattributes
@@ -1329,6 +1329,7 @@ packages/cocoaint/src/foundation/NSZone.inc svneol=native#text/plain
 packages/cocoaint/src/iPhoneAll.pas svneol=native#text/plain
 packages/cocoaint/src/patches/NSBundle.patch svneol=native#text/plain
 packages/cocoaint/src/uikit/UIKit.inc svneol=native#text/plain
+packages/cocoaint/src/uikit/UndefinedClasses.inc svneol=native#text/plain
 packages/cocoaint/src/webkit/DOMAbstractView.inc svneol=native#text/plain
 packages/cocoaint/src/webkit/DOMAttr.inc svneol=native#text/plain
 packages/cocoaint/src/webkit/DOMCDATASection.inc svneol=native#text/plain
@@ -1481,6 +1482,10 @@ packages/cocoaint/utils/Make[!!-~]Cocoa[!!-~]Headers.txt svneol=native#text/plai
 packages/cocoaint/utils/Make[!!-~]iPhone[!!-~]Headers.txt svneol=native#text/plain
 packages/cocoaint/utils/Using[!!-~]Installer[!!-~]Script.txt svneol=native#text/plain
 packages/cocoaint/utils/install_objp.sh svneol=native#text/plain
+packages/cocoaint/utils/iphone/iPhone[!!-~]Parser.txt svneol=native#text/plain
+packages/cocoaint/utils/iphone/objp_parser.php svneol=native#text/plain
+packages/cocoaint/utils/iphone/parser.php svneol=native#text/plain
+packages/cocoaint/utils/iphone/pascocoa_parser.php svneol=native#text/plain
 packages/cocoaint/utils/objp_parser.php svneol=native#text/plain
 packages/cocoaint/utils/parser.php svneol=native#text/plain
 packages/cocoaint/utils/pascocoa_parser.php svneol=native#text/plain
