* dfa fixes by Sergei Gorelkin, resolve #15402
git-svn-id: trunk@14455 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -8737,6 +8737,8 @@ tests/test/opt/tcmov.pp svneol=native#text/plain
 tests/test/opt/tcse1.pp svneol=native#text/plain
 tests/test/opt/tcse2.pp svneol=native#text/plain
 tests/test/opt/tcse3.pp svneol=native#text/plain
+tests/test/opt/tdfa1.pp svneol=native#text/pascal
+tests/test/opt/tdfa2.pp svneol=native#text/pascal
 tests/test/opt/tgotoreg.pp svneol=native#text/plain
 tests/test/opt/treg1.pp svneol=native#text/plain
 tests/test/opt/treg2.pp svneol=native#text/plain
