* disabled the use of samevalue() when comparing float variants, because      a) it's Delphi-incompatible      b) when a tdatetime property is obtained via GetPropValue(), then         it will be a varfloat rather than a vardate, and there full         precision certainly is required (mantis #15296)   - since DoVarCmpFloat() is now identical to DoVarCmpDate(), removed     DoVarCmpFloat
git-svn-id: trunk@14472 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10148,6 +10148,7 @@ tests/webtbs/tw15207.pp svneol=native#text/plain
 tests/webtbs/tw15274.pp svneol=native#text/plain
 tests/webtbs/tw15293.pp svneol=native#text/plain
 tests/webtbs/tw15293a.pp svneol=native#text/plain
+tests/webtbs/tw15296.pp svneol=native#text/plain
 tests/webtbs/tw15304.pp svneol=native#text/plain
 tests/webtbs/tw1532.pp svneol=native#text/plain
 tests/webtbs/tw15364.pp svneol=native#text/plain
