* also recompile a unit if class/object definitions in indirectly used     units have changed, because these can influence the code of the     current unit in case method signatures changed (mantis #13840)     + manual test   * fixed some recompilation crashes related to WPO info   * clarified the unit_u_add_depend_to message
git-svn-id: trunk@14503 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10088,6 +10088,11 @@ tests/webtbs/tw1376.pp svneol=native#text/plain
 tests/webtbs/tw13763.pp svneol=native#text/plain
 tests/webtbs/tw13813.pp svneol=native#text/plain
 tests/webtbs/tw13820.pp svneol=native#text/plain
+tests/webtbs/tw13840/doit.sh svneol=LF#text/plain eol=lf
+tests/webtbs/tw13840/tw13840a.pp svneol=native#text/plain
+tests/webtbs/tw13840/tw13840b.pp svneol=native#text/plain
+tests/webtbs/tw13840/tw13840c.pp svneol=native#text/plain
+tests/webtbs/tw13840/tw13840d.pp svneol=native#text/plain
 tests/webtbs/tw13872.pp svneol=native#text/plain
 tests/webtbs/tw13890.pp svneol=native#text/plain
 tests/webtbs/tw13948.pp svneol=native#text/plain
