--- a/.gitattributes
+++ b/.gitattributes
@@ -9530,6 +9530,7 @@ tests/webtbf/tw15287.pp svneol=native#text/plain
 tests/webtbf/tw15288.pp svneol=native#text/plain
 tests/webtbf/tw15303.pp svneol=native#text/plain
 tests/webtbf/tw15391a.pp svneol=native#text/plain
+tests/webtbf/tw15447.pp svneol=native#text/plain
 tests/webtbf/tw1599.pp svneol=native#text/plain
 tests/webtbf/tw1599b.pp svneol=native#text/plain
 tests/webtbf/tw1633.pp svneol=native#text/plain
