--- a/.gitattributes
+++ b/.gitattributes
@@ -10152,6 +10152,7 @@ tests/webtbs/tw1501.pp svneol=native#text/plain
 tests/webtbs/tw15015.pp svneol=native#text/plain
 tests/webtbs/tw15088.pp svneol=native#text/plain
 tests/webtbs/tw15169.pp svneol=native#text/plain
+tests/webtbs/tw15203.pp svneol=native#text/pascal
 tests/webtbs/tw15207.pp svneol=native#text/plain
 tests/webtbs/tw15274.pp svneol=native#text/plain
 tests/webtbs/tw15293.pp svneol=native#text/plain
