+ OpenCL package by Dmitry Boyarintsev, fixed and tested on win32 and win64, enabled for i386-darwin because submitter tested on Mac OS X, resolves #15297
git-svn-id: trunk@14534 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -4491,6 +4491,12 @@ packages/openal/src/alch.inc svneol=native#text/plain
 packages/openal/src/alexth.inc svneol=native#text/plain
 packages/openal/src/alh.inc svneol=native#text/plain
 packages/openal/src/openal.pas svneol=native#text/plain
+packages/opencl/Makefile svneol=native#text/plain
+packages/opencl/Makefile.fpc svneol=native#text/plain
+packages/opencl/examples/basicsample.pas svneol=native#text/pascal
+packages/opencl/fpmake.pp svneol=native#text/pascal
+packages/opencl/src/cl.pp svneol=native#text/pascal
+packages/opencl/src/cl_gl.pp svneol=native#text/pascal
 packages/opengl/Makefile svneol=native#text/plain
 packages/opengl/Makefile.fpc svneol=native#text/plain
 packages/opengl/examples/Makefile svneol=native#text/plain
