-- Zusammenführen von r13615 in ».«: U    rtl/inc/objpas.inc A    tests/webtbs/tw14418.pp U    compiler/symdef.pas U    compiler/nobj.pas U    compiler/pdecvar.pas -- Zusammenführen von r13651 in ».«: U    rtl/unix/video.pp U    rtl/unix/convert.inc -- Zusammenführen von r13726 in ».«: U    ide/fpusrscr.pas G    rtl/unix/video.pp -- Zusammenführen von r13811 in ».«: U    utils/h2pas/scan.pas U    utils/h2pas/scan.l -- Zusammenführen von r13812 in ».«: UU   utils/h2pas/h2pas.y GU   utils/h2pas/scan.l -- Zusammenführen von r13820 in ».«: U    utils/h2pas/h2pas.pas G    utils/h2pas/h2pas.y -- Zusammenführen von r13821 in ».«: G    utils/h2pas/scan.pas G    utils/h2pas/scan.l -- Zusammenführen von r13822 in ».«: G    utils/h2pas/h2pas.pas G    utils/h2pas/h2pas.y -- Zusammenführen von r13825 in ».«: A    tests/webtbs/tw14553.pp U    compiler/scanner.pas -- Zusammenführen von r13832 in ».«: A    tests/webtbs/tw14743.pp U    compiler/pdecsub.pas
git-svn-id: branches/fixes_2_4@14536 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9346,14 +9346,17 @@ tests/webtbs/tw14307.pp svneol=native#text/plain
 tests/webtbs/tw1433.pp svneol=native#text/plain
 tests/webtbs/tw14363.pp svneol=native#text/plain
 tests/webtbs/tw14403.pp svneol=native#text/plain
+tests/webtbs/tw14418.pp svneol=native#text/plain
 tests/webtbs/tw1445.pp svneol=native#text/plain
 tests/webtbs/tw1450.pp svneol=native#text/plain
 tests/webtbs/tw1451.pp svneol=native#text/plain
 tests/webtbs/tw14514.pp svneol=native#text/plain
 tests/webtbs/tw14536.pp svneol=native#text/plain
+tests/webtbs/tw14553.pp svneol=native#text/pascal
 tests/webtbs/tw14617.pp svneol=native#text/plain
 tests/webtbs/tw1470.pp svneol=native#text/plain
 tests/webtbs/tw1472.pp svneol=native#text/plain
+tests/webtbs/tw14743.pp svneol=native#text/pascal
 tests/webtbs/tw1477.pp svneol=native#text/plain
 tests/webtbs/tw1479.pp svneol=native#text/plain
 tests/webtbs/tw1485.pp svneol=native#text/plain
@@ -10490,12 +10493,12 @@ utils/h2pas/Makefile.fpc svneol=native#text/plain
 utils/h2pas/README.txt svneol=native#text/plain
 utils/h2pas/converu.pas svneol=native#text/plain
 utils/h2pas/h2pas.pas svneol=native#text/plain
-utils/h2pas/h2pas.y -text
+utils/h2pas/h2pas.y svneol=native#text/plain
 utils/h2pas/h2paspp.pas svneol=native#text/plain
 utils/h2pas/h2plexlib.pas svneol=native#text/plain
 utils/h2pas/h2poptions.pas svneol=native#text/plain
 utils/h2pas/h2pyacclib.pas svneol=native#text/plain
-utils/h2pas/scan.l -text
+utils/h2pas/scan.l svneol=native#text/plain
 utils/h2pas/scan.pas svneol=native#text/plain
 utils/h2pas/testit.h -text
 utils/h2pas/yylex.cod -text
