* removed extra space character when generating the maximal number of     significant digits and frac(value)+roundcorr overflows to 1     (mantis #15308, fix by Dariusz Mazur)
git-svn-id: trunk@14563 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10171,6 +10171,7 @@ tests/webtbs/tw15293.pp svneol=native#text/plain
 tests/webtbs/tw15293a.pp svneol=native#text/plain
 tests/webtbs/tw15296.pp svneol=native#text/plain
 tests/webtbs/tw15304.pp svneol=native#text/plain
+tests/webtbs/tw15308.pp svneol=native#text/plain
 tests/webtbs/tw1532.pp svneol=native#text/plain
 tests/webtbs/tw15364.pp svneol=native#text/plain
 tests/webtbs/tw15370.pp svneol=native#text/plain
