+ patch by Sven Barth to add native NT rtl support to the compiler, resolves #14886
git-svn-id: trunk@14565 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -522,6 +522,7 @@ compiler/systems/i_haiku.pas svneol=native#text/plain
 compiler/systems/i_linux.pas svneol=native#text/plain
 compiler/systems/i_macos.pas svneol=native#text/plain
 compiler/systems/i_morph.pas svneol=native#text/plain
+compiler/systems/i_nativent.pas svneol=native#text/pascal
 compiler/systems/i_nds.pas svneol=native#text/plain
 compiler/systems/i_nwl.pas svneol=native#text/plain
 compiler/systems/i_nwm.pas svneol=native#text/plain
@@ -545,6 +546,7 @@ compiler/systems/t_haiku.pas svneol=native#text/plain
 compiler/systems/t_linux.pas svneol=native#text/plain
 compiler/systems/t_macos.pas svneol=native#text/plain
 compiler/systems/t_morph.pas svneol=native#text/plain
+compiler/systems/t_nativent.pas svneol=native#text/pascal
 compiler/systems/t_nds.pas svneol=native#text/plain
 compiler/systems/t_nwl.pas svneol=native#text/plain
 compiler/systems/t_nwm.pas svneol=native#text/plain
