+ patch by Sven Barth to add native NT rtl support to the fpc rtl, resolves #14887
git-svn-id: trunk@14568 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -6720,6 +6720,19 @@ rtl/morphos/utility.pp svneol=native#text/plain
 rtl/morphos/varutils.pp svneol=native#text/plain
 rtl/morphos/video.pp svneol=native#text/plain
 rtl/morphos/videodata.inc svneol=native#text/plain
+rtl/nativent/Makefile.fpc svneol=native#text/plain
+rtl/nativent/buildrtl.lpi svneol=native#text/plain
+rtl/nativent/buildrtl.pp svneol=native#text/pascal
+rtl/nativent/ddk.pas svneol=native#text/pascal
+rtl/nativent/ddk/ddkex.inc svneol=native#text/plain
+rtl/nativent/ddk/ddktypes.inc svneol=native#text/plain
+rtl/nativent/ndk.pas svneol=native#text/pascal
+rtl/nativent/ndkutils.pas svneol=native#text/pascal
+rtl/nativent/sysheap.inc svneol=native#text/plain
+rtl/nativent/sysndk.inc svneol=native#text/plain
+rtl/nativent/sysos.inc svneol=native#text/plain
+rtl/nativent/sysosh.inc svneol=native#text/plain
+rtl/nativent/system.pp svneol=native#text/pascal
 rtl/nds/Makefile svneol=native#text/plain
 rtl/nds/Makefile.fpc svneol=native#text/plain
 rtl/nds/classes.pp svneol=native#text/plain
