* changed {$align mac68k} from an alias for {$packrecords 2} to a proper     implementation for mac68k alignment (mantis #15061)   * changed {$align power} from an alias for {$packrecords 4} to an alias for     {$packrecords c}, as Power alignment is the default C alignment for     PowerPC under Mac OS X (it's close to {$packrecords 4}, but not identical)
git-svn-id: trunk@14577 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -10178,6 +10178,8 @@ tests/webtbs/tw14992b.pp svneol=native#text/pascal
 tests/webtbs/tw14992c.pp svneol=native#text/pascal
 tests/webtbs/tw1501.pp svneol=native#text/plain
 tests/webtbs/tw15015.pp svneol=native#text/plain
+tests/webtbs/tw15061.pp svneol=native#text/plain
+tests/webtbs/tw15061a.pp svneol=native#text/plain
 tests/webtbs/tw15088.pp svneol=native#text/plain
 tests/webtbs/tw15169.pp svneol=native#text/plain
 tests/webtbs/tw15203.pp svneol=native#text/pascal
