compiler:   - implement class properties: properties which can access only static fields and static class methods   - tests   - fix a possibility to call an instance method from the class method
git-svn-id: trunk@14585 -

--- a/.gitattributes
+++ b/.gitattributes
@@ -9222,6 +9222,9 @@ tests/test/tset7.pp svneol=native#text/plain
 tests/test/tsetsize.pp svneol=native#text/plain
 tests/test/tstack.pp svneol=native#text/plain
 tests/test/tstatic1.pp svneol=native#text/pascal
+tests/test/tstatic2.pp svneol=native#text/pascal
+tests/test/tstatic3.pp svneol=native#text/pascal
+tests/test/tstatic4.pp svneol=native#text/pascal
 tests/test/tstprocv.pp svneol=native#text/plain
 tests/test/tstring1.pp svneol=native#text/plain
 tests/test/tstring10.pp svneol=native#text/plain
